# PetS-ATC-2022

./: .gitignore  CMakeLists.txt  README.md  build.sh  pull_docker_images.sh  requirements.txt
3rd/: CMakeLists.txt  eigen.cmake  openblas.cmake
3rd/seqmm/: .gitignore  CMakeLists.txt  README.md
3rd/seqmm/cmake/: abseil.cmake
3rd/seqmm/seqmm/: CMakeLists.txt  cpu_op.h  cublas_op.cpp  cublas_op.h  cusparse_op.cpp  cusparse_op.h  dense_op_base.h  paisparse_op.cpp  paisparse_op.h  sputnik_op.cpp  sputnik_op.h  types.h  utils.cpp  utils.h
3rd/seqmm/seqmm/matrix_shuffle/: matrix_shuffle.cpp
3rd/seqmm/seqmm/sputnik/: CMakeLists.txt  compute_utils.h  cuda_spmm.cu  cuda_spmm.h  dense_tile.h  index_format.cu  index_format.h  load_store.h  matrix_utils.cu  matrix_utils.h  memory_aligner.h  output_tile.h  sparse_tile.h  spmm_config.h  type_utils.h  vector_utils.h
cmake/: cuda.cmake
docker_scripts/: run_pars_in_docker.sh  run_pets_in_docker.sh  run_seqs_in_docker.sh
research/: download_bert.sh  eval_batching_strategies.sh  eval_breakdown.sh  eval_capacity_pets.sh  eval_multi_stream.sh  eval_throughput_pars.sh  eval_throughput_pets.sh  eval_throughput_seqs.sh  plot_results.sh  run_pets_main_results.sh
research/legacy/: pet_no_schedule_benchmarking.py  pet_serving_demo.py  pynvml_example.py  run_pet_no_schedule_benchmarking.sh  run_pet_schedule_benchmarking.sh  run_sequential_model_serving.sh
research/python_scripts/: bert_pars.py  calc_breakdown.py  pet_experiments.py  (+4 more)
tools/: Dockerfile_dev.gpu  Dockerfile_release.gpu  build_docker_gpu.sh  build_install.sh
(+67 files in other folders)
